--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -27,7 +27,7 @@
         </menu>
 
         <section class="sectcont1">
-            <h3> Como encontrarnos</h3>
+            <h3 class="encontranos"> Como encontrarnos</h3>
 
             <iframe class="iframemapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105227.70992317649!2d-58.91690824999999!3d-34.49360605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9cb6643d2003%3A0xa8da0402f634b636!2sPilar%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1662573428414!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
@@ -35,17 +35,17 @@
         <section class="sectcont2">
             <h3>Redes</h3>
             <div class="insta">
-                <img src="../imagenes/logo insta.png" alt="">
+                <img  src="../imagenes/logo insta.png" alt="">
                 <p>TaborCarnes</p>
             </div>
 
             <div class="face">
-                <img src="../imagenes/png feic.png" alt="">
+                <img  src="../imagenes/png feic.png" alt="">
                 <p>TaborCarnes</p>
             </div>
 
             <div class="fono">
-                <img src="../imagenes/icono whatsapp.png" alt="">
+                <img  src="../imagenes/icono whatsapp.png" alt="">
                 <p>11 2435-6688</p>
             </div>
         </section>
