--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="shortcut icon" href="imagenes/Logo circular tabor png.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">    
     <title>Tabor carnes</title>
-     
 </head>
 <body>
     <div class="contenedor">
@@ -18,22 +18,36 @@
             <h3>Garantiza el sabor</h3>
         </header>
 
-        <menu class="menu-general">
-            <div class="backmenu">
-            <ul class="ul-menu-general">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="paginas/productos.html">Productos</a></li>
-                <li><a href="paginas/eventos.html">Eventos</a></li>
-                <li><a href="paginas/historia.html">Historia</a></li>
-                <li><a href="paginas/contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg menu">
+            <div class="container-fluid menu-display">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse menu-contenedor" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 menu-items">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/eventos.html">Eventos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/historia.html">Historia</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
             </div>
-            <form class="formind" action="busqueda">
-                <label for="Busqueda"></label>
-                <input class="inputmenuin" type="text" name="Busqueda" placeholder="Que estas buscando?">
-            </form>
-            
-        </menu>
+          </nav>
 
         <section class="tabletbuscado">
             <h3>Mas buscado</h3>
@@ -69,5 +83,6 @@
         </footer>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
