Segunda entrega proyecto final

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -17,7 +17,7 @@
             <h3>Garantiza el sabor</h3>
         </header>
 
-        <nav class="navbar navbar-expand-lg menu">
+        <nav class="navbar navbar-expand-lg menuco">
             <div class="container-fluid menu-display">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
