--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -49,6 +49,28 @@
             </div>
           </nav>
 
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../imagenes/Carrusel1.webp" class="centercarru"  alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../imagenes/carrusel2.jpg" class="centercarru" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../imagenes/carrusel3.jpg" class="centercarru" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
         <section class="sectionev1">
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ratione numquam quisquam, hic assumenda natus odit blanditiis cumque ipsa quas tempora quidem autem? Mollitia, consequuntur! Ad pariatur exercitationem eaque corrupti.
