Agrego mixin, extend, maps, map get, keywords, descriptions

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="../imagenes/ circular tabor png.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
+    <meta name="keywords" content="carne, asado, eventos, vinos, picadas, vaca, parrilla, costillar, cortes, precios">
+    <meta name="description" content="Nuestros productos no pueden faltar en tus comidas, especialmente cuando prendas la parrilla, dejanos ser parte!">
     <title>Tabor productos</title>
 </head>
 <body>
@@ -25,7 +27,7 @@
               <div class="collapse navbar-collapse menu-contenedor" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 menu-items">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./productos.html">Productos</a>
@@ -49,14 +51,14 @@
           </nav>
 
         <section class="sectionp">
-            <h3 id="iravaca">Vaca</h3>
+            <h3 class="padingvaca" id="iravaca">Vaca</h3>
             <ul class="ulproduct">
                 <li><img class="imgprod" src="../imagenes/Entrañatabor.jpeg" alt=""></li>
                 <li><img class="imgprod" src="../imagenes/Ojodebifetabor.jpeg" alt=""></li>
                 <li><img class="imgprod" src="../imagenes/Costillartabor.jpeg" alt=""></li>
                 <li><img class="imgprod" src="../imagenes/Tomahawktabor.jpeg" alt=""></li>
             </ul>  
-            <h3 id="irapollo">Pollo</h3>
+            <h3 class="padingpollo" id="irapollo">Pollo</h3>
              <ul class="ulproduct" id="seccionpollo">
                 <li><img class="imgprod" src="../imagenes/provo.jpg" alt=""></li>
                 <li><img class="imgprod" src="../imagenes/pechuga de pollo.jpg" alt=""></li>
@@ -64,7 +66,7 @@
                 <li><img class="imgprod" src="../imagenes/mollejas.jpg" alt=""></li>
             </ul>
 
-            <h3 id="irabebida">Bebida</h3>
+            <h3 class="padingbebida" id="irabebida">Bebida</h3>
             <ul class="ulproduct">   
                 <li><img class="imgprod" src="../imagenes/provo.jpg" alt=""></li>
                 <li><img class="imgprod" src="../imagenes/pechuga de pollo.jpg" alt=""></li>
@@ -72,7 +74,7 @@
                 <li><img class="imgprod" src="../imagenes/mollejas.jpg" alt=""></li>
             </ul> 
 
-            <h3 id="irapicada">Picada</h3>
+            <h3 class="padingpicada" id="irapicada">Picada</h3>
             <ul class="ulproduct">
                 <li><img class="imgprod" src="../imagenes/Entrañatabor.jpeg" alt=""></li>
                 <li><img class="imgprod" src="../imagenes/Ojodebifetabor.jpeg" alt=""></li>
@@ -89,6 +91,7 @@
             <form action="Email">
                 <label for="Email"></label>
                 <input type="email" name="Email" id="" placeholder="Email">
+                <button class="btnfooter btn-outline-success" type="submit">send</button>
             </form>
         </footer>
     </div>
