--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagenes/Logo circular tabor png.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">    
+    <link rel="stylesheet" href="css/main.css">
+    <meta name="keywords" content="carne, asado, eventos, vinos, picadas, vaca, parrilla, costillar">
+    <meta name="description" content="Veni a conocer Tabor carnes, la mejor distribuidora de productos para asados de pilar. Animate y conoce lo que tenemos para vos!">
     <title>Tabor carnes</title>
 </head>
 <body>
@@ -42,7 +44,7 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <input class="form-control me-2 searchnav" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
@@ -79,6 +81,7 @@
             <form action="Email">
                 <label for="Email"></label>
                 <input type="email" name="Email" id="" placeholder="Email">
+                <button class="btnfooter btn-outline-success" type="submit">send</button>
             </form>
         </footer>
 
