--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../imagenes/ circular tabor png.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/circular tabor png.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
+    <meta name="keywords" content="carne, asado, eventos, vinos, picadas, vaca, parrilla, costillar, amigos, juntadas">
+    <meta name="description" content="En esta sección te contamos nuestros servicios de caterin y por que somos la mejor opcion para que disfrutes con amigos">
     <title>Tabor eventos</title>
 </head>
 <body>
@@ -26,7 +28,7 @@
               <div class="collapse navbar-collapse menu-contenedor" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 menu-items">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item ">
                     <a class="nav-link" href="./productos.html">Productos</a>
@@ -108,6 +110,7 @@
             <form action="Email">
                 <label for="Email"></label>
                 <input type="email" name="Email" id="" placeholder="Email">
+                <button class="btnfooter btn-outline-success" type="submit">send</button>
             </form>
         </footer>
 
